# BabelJudge

./: .gitignore  CITATION.cff  LICENSE  MultiJudge_Colab.ipynb  README.md  demo_leaderboard.md  demo_results.json  gen_benchmark_charts.py  gen_linkedin_graphics.py  gen_paper_figures.py  linkedin_reply_agentic.txt  mac_leaderboard.md  mac_results.json  pyproject.toml  run_mac.py
babeljudge/: __init__.py  harness.py  judges.py  metrics.py  perturbations.py  schema.py  sources.py
babeljudge/agentic/: __init__.py  harness.py  judges.py  metrics.py  perturbations.py  schema.py  sources.py
data/: CARD.md
examples/: run_agentic_demo.py  run_demo.py  run_mac.py
paper/: ZENODO_SETUP.md  main.tex  references.bib
tests/: test_metrics.py
